[Material][Mac] Fix for Bookmark Subfolders Hover State

Ensures that the bookmark item's highlight gets drawn when
showsBorderOnlyWhileMouseInside is set to false

BUG=613261

Review-Url: https://codereview.chromium.org/2134823002
Cr-Commit-Position: refs/heads/master@{#404767}

Former-commit-id: a1272f22cff24d0ffe945665dbc4338d39107466